# 0gmem

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/locomo/: sample_locomo.json
docs/: ANALYSIS.md  DESIGN.md  MCP_SERVER.md
docs/internal/: 10conv_improvement_plan.md  EVALUATION_STATUS.md  IMPROVEMENT_PLAN_95.md  ROOT_CAUSE_ANALYSIS.md  optimization_strategy_v82.md
examples/: basic_usage.py  retrieval.py
scripts/: download_locomo.py  run_evaluation.py  test_profile.py
src/zerogmem/: __init__.py  mcp_server.py  persistence.py
src/zerogmem/consolidator/: __init__.py
src/zerogmem/encoder/: __init__.py  embedding_cache.py  encoder.py  entity_extractor.py  entity_timeline.py  event_date_index.py  fact_extractor.py  llm_fact_extractor.py  memory_types.py  session_summarizer.py  temporal_extractor.py  temporal_resolver.py
src/zerogmem/evaluation/: __init__.py  locomo.py
src/zerogmem/graph/: __init__.py  causal.py  entity.py  semantic.py  temporal.py  unified.py
src/zerogmem/memory/: __init__.py  episodic.py  extractor.py  manager.py  memcell.py  semantic.py  working.py
src/zerogmem/reasoning/: __init__.py  answer_verifier.py  question_decomposer.py
src/zerogmem/retriever/: __init__.py  attention_filter.py  bm25_retriever.py  multi_query.py  query_analyzer.py  reranker.py  retriever.py  semantic_profile_matcher.py
src/zerogmem/utils/: __init__.py
tests/: __init__.py  conftest.py  test_attention_filter.py  test_export_import.py  test_integration.py  test_mcp_validation.py  test_memory_limits.py  test_observability.py  test_persistence.py  test_thread_safety.py
