[project]
name = "0gmem"
version = "0.1.0"
description = "Zero-Gap Memory: A next-generation AI memory system for SOTA LoCoMo performance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "0G Labs"}
]
keywords = ["ai", "memory", "llm", "knowledge-graph", "conversational-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "networkx>=3.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "spacy>=3.5.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/loganionian/0gmem"
Documentation = "https://github.com/loganionian/0gmem#readme"
Repository = "https://github.com/loganionian/0gmem"
Issues = "https://github.com/loganionian/0gmem/issues"
Changelog = "https://github.com/loganionian/0gmem/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
eval = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zerogmem"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
